@@ -33,7 +33,7 @@ Main window & \texttt{g} &
  & \texttt{e} & edit properties of the selected series \\
  & \texttt{t} & time-series plot of selected series (if applicable) \\
  & \texttt{Alt-x} & open dialog for executing a single command \\
- & Ctrl-v & paste data from clipboard (CSV or similar) \\
+ & \texttt{Ctrl-v} & paste data from clipboard (CSV or similar) \\
  & \texttt{Delete} & delete the selected series \\[6pt]
 
 Graph window & \texttt{q} & close \\
@@ -41,10 +41,15 @@ Graph window & \texttt{q} & close \\
  & \texttt{z} & start zooming \\
  & \texttt{a} & render audio graph (if supported) \\[6pt]
 
+Model window & \texttt{q} & close \\
+ & \texttt{s} & save to session \\
+ & \texttt{a} & do audio (if supported) \\
+ & \texttt{x} & stop audio \\[6pt]
+
 Data files window & \texttt{Enter} & Open the selected file \\[6pt]
 
 Console window & \texttt{Up} & Navigate the command history, back \\
- & \texttt{Down} & Navigate the command history, forward \\
+ & \texttt{Down} & Navigate command history, forward \\
  & \texttt{Tab} & Command completion \\
 
 \end{tabular}
